making activitynaterialvideo, activity_questions.xml, activity_questions_discussion.xml,item_layout_questions, activity_quiz_result.xml, adding binding and intent on LoginActivity, some changes on string, themes for bg on drawable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Beta1_1</string>
     <string name="tv_nahwu_desc">Nahwu adalah ilmu yang mempelajari struktur kalimat dalam bahasa Arab. Fokus utama nahwu adalah bagaimana kata-kata disusun dalam sebuah kalimat agar sesuai dengan kaidah tata bahasa Arab. Nahwu mencakup aturan tentang posisi dan fungsi kata dalam kalimat, serta perubahan yang terjadi pada akhir kata karena posisi tersebut.</string>
     <string name="sharaf_desc">Sharaf adalah salah satu cabang penting dalam ilmu bahasa Arab yang fokus pada morfologi atau struktur kata. Sharaf mempelajari bentuk-bentuk kata, perubahan bentuk kata, dan bagaimana kata-kata itu diubah untuk menciptakan makna yang berbeda.</string>
+    <string name="tv_quote_result2">Tetap Pertahankan\nSemangatmu ya!</string>
 </resources>
